MDEV-16143 Assertion failure in rec_offs_get_n_alloc() due to row_trx_id_offset()

row_trx_id_offset(): Add the missing rec_offs_init() call.
This was broken by commit 97e51d24cb53da1198039ef100965202abec8bfa.